Feat: Handling CORS in server side